-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0 Beta3
-
None
-
-
1f349e51f (dev), 26004d184 (6.5), 4b15001d8 (dev), 0616b2c8b (dev), 18d368ed5 (6.6)
CharacterController does not receive body contact reports when colliding with a StaticRigidBody (with sendContactReports set on StaticRigidBody and receiveContactReports set on CharacterController). OnBodyContact is never called. When (for testing) replacing CharacterController with DynamicRigidBody, contact reports are received as expected.
For Gerrit Dashboard: QTBUG-111565 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
464724,5 | WIP: Add character controller callback | dev | qt/qtquick3dphysics | Status: ABANDONED | -2 | 0 |
465847,5 | Fix delete order | dev | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |
465848,14 | Add character controller onShapeHit callback | dev | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |
466513,2 | Fix delete order | 6.5 | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |
466514,1 | Fix delete order | 6.5.0 | qt/qtquick3dphysics | Status: ABANDONED | +2 | 0 |
493949,6 | Fix revision typo (6,5) -> (6,6) | dev | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |
496481,2 | Fix revision typo (6,5) -> (6,6) | 6.6 | qt/qtquick3dphysics | Status: MERGED | +2 | 0 |