Fix delete order

We should delete bodies before deleting the physics world since they can
potentially reference something in the world.

Pick-to: 6.5 6.5.0
Task-number: QTBUG-111565
Change-Id: I99ab3b6711ee0c656a19d1c49d102455a908b399
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>